Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33739

Viewfinder not shown on BlackBerry platform

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0 RC1
    • 5.3.0
    • Multimedia
    • None
    • a2f9f25d8577fefe8358eb848da206e5ebdf4178

    Description

      The attached app doesn't show viewfinder, when camera is initialized in constructor.
      The problem is that WindowGrabber::nativeEventFilter doesn't get called with eventType "SCREEN_EVENT_CREATE" and hence the window is not grabbed.
      If a queued connection is used instead of a direct call somewhere before starting the camera it works.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tokoe.kdab Tobias Koenig
            bweimer Bernd Weimer
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes